<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/activity_warning"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="21sp"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/warning_text_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/warning_text_description"/>

    <Button
        android:id="@+id/accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yes"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:textColor="@color/colorAccent"
        android:background="@drawable/bg_red"/>

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/close"
        android:textColor="@color/colorTextGrey"
        android:background="@drawable/bg_bordered_dark"/>

</LinearLayout>
